--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 project(MYENGINE)
 
+include_directories(src)
+
 add_library(myEngine
 	src/myEngine/Component.cpp
 	src/myEngine/Component.h
@@ -13,3 +15,5 @@ add_library(myEngine
 add_executable(game
   src/game/main.cpp
 )
+
+target_link_libraries(game myEngine)
