--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,17 @@ if(MSVC)
   include_directories(
     contrib/msvc-windows-x86/glew/include
     contrib/msvc-windows-x86/SDL2/include
+    contrib/msvc-windows-x86/openal-soft/include
+    contrib/msvc-windows-x86/ogg/include
+    contrib/msvc-windows-x86/vorbis/include
   )
 
   link_directories(
     ${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/SDL2/lib
     ${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/glew/lib
+    ${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/openal-soft/lib
+    ${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/ogg/lib
+    ${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/vorbis/lib
   )
 endif()
 
@@ -23,6 +29,7 @@ if(MSVC)
 endif()
 
 add_library(myEngine
+	src/myEngine/myEngine.h
 	src/myEngine/Component.cpp
 	src/myEngine/Application.cpp
 	src/myEngine/Entity.cpp
@@ -52,15 +59,17 @@ add_library(myEngine
 	src/myEngine/Resource.h
 	src/myEngine/Resources.h
 	src/myEngine/Resources.cpp
+	src/myEngine/Exception.h
+	src/myEngine/Exception.cpp
 )	
 
 if(MSVC)
   target_link_libraries(myEngine
-    SDL2 glew32 opengl32
+    SDL2 glew32 opengl32 OpenAL32 ogg vorbis vorbisfile
   )
 else()
   target_link_libraries(myEngine
-    SDL2 GLU GLEW GL
+    SDL2 GLU GLEW GL AL ogg vorbis vorbisfile
   )
 endif()
 
@@ -82,6 +91,12 @@ if(MSVC)
   add_custom_command(TARGET game POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
       "${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/glew/bin/glew32.dll"
+      "$<TARGET_FILE_DIR:game>"
+  )
+
+  add_custom_command(TARGET game POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+      "${CMAKE_SOURCE_DIR}/contrib/msvc-windows-x86/openal-soft/bin/OpenAL32.dll"
       "$<TARGET_FILE_DIR:game>"
   )
 endif()
